fix: add white space to handle tab bar height

--- a/src/app/home/awareness/awareness.component.scss
+++ b/src/app/home/awareness/awareness.component.scss
@@ -62,8 +62,3 @@ color: var(--color-light);
 
 
 }
-.white-space{
-    height: 65px;
-    width: 100%;
-    background-color: white;
-}
