--- a/src/global.scss
+++ b/src/global.scss
@@ -232,3 +232,8 @@ display: grid;
 .ion-page{
   justify-content: flex-start;
 }
+.white-space{
+  height: 65px;
+  width: 100%;
+  background-color: white;
+}
